--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -17,7 +17,7 @@
     <AndroidResgenClass>Resource</AndroidResgenClass>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
@@ -96,12 +96,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomLayouts\VerboseRelativeLayout.cs" />
-    <Compile Include="MainActivity.cs" />
-    <Compile Include="NestedActivity.cs" />
-    <Compile Include="OverdrawActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VerboseActivity.cs" />
+    <Compile Include="CustomLayouts\SignaturePad\SignatureCaptureView.cs" />
+    <Compile Include="Activities\DrawActivity.cs" />
+    <Compile Include="Activities\MainActivity.cs" />
+    <Compile Include="Activities\NestedActivity.cs" />
+    <Compile Include="Activities\OverdrawActivity.cs" />
+    <Compile Include="Activities\VerboseActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -127,6 +129,7 @@
     <AndroidResource Include="Resources\layout\constraints_layout.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\draw_layout.axml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml">
@@ -149,6 +152,10 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-nodpi\singapore.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CustomLayouts\SignaturePad\" />
+    <Folder Include="Activities\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Android.Support.Compat.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Compat.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Compat.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Compat.targets')" />
