Add metrics listener

--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -94,6 +94,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activities\MetricsListener.cs" />
     <Compile Include="CustomLayouts\VerboseRelativeLayout.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
