--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -95,6 +95,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activities\MetricsListener.cs" />
+    <Compile Include="Activities\Verbose2Activity.cs" />
+    <Compile Include="Activities\Verbose3Activity.cs" />
+    <Compile Include="CustomLayouts\VerboseConstraintLayout.cs" />
+    <Compile Include="CustomLayouts\VerboseLinearLayout.cs" />
     <Compile Include="CustomLayouts\VerboseRelativeLayout.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -108,7 +112,7 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="Properties\AndroidManifest.xml" />
-    <AndroidResource Include="Resources\layout\verbose_layout.axml">
+    <AndroidResource Include="Resources\layout\nested_verbose_layout.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\overdraw_row.axml">
@@ -140,7 +144,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\values\attrs.xml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\linear_verbose_layout.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\colors.xml" />
   </ItemGroup>
@@ -153,7 +161,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-nodpi\singapore.jpg" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\constraint_verbose_layout.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Android.Support.Compat.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Compat.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Compat.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Compat.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
